--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,18 @@
+.toDoListInput {
+    border: none;
+}
 
-/* 
+.list-item-counter {
+    color: gray;
+    font-size: small;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.list-bottom-deco-1{
+    width: 98%;
+    height: 10px;
+}
 
-*/
+.list-bottom-deco-2{
+    width: 96%;
+    height: 10px;
+}
